--- a/student/student_profile.html
+++ b/student/student_profile.html
@@ -1,53 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>{{student.student_number}}</title>
-	<link rel="stylesheet" type="text/css" href="/stylesheets/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/css/cover.css">
-	<script type="text/javascript" src="/stylesheets/js/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="/stylesheets/js/bootstrap.min.js"></script>
-</head>
-<body>
-
-<script type="text/javascript"></script>
-	
-	<div class="navbar navbar-inverse navbar-static-top" style="margin-bottom:0px;">
-		<div class = "container">
-
-			<a href="/" class="navbar-brand">Advanced Web Computing</a>
-
-			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-
-			<div class="collapse navbar-collapse navHeaderCollapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/student/home"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
-					<li><a href="/student/new"><span class="glyphicon glyphicon-file"></span>  Create</a></li>
-					<li><a href="/student/list"><span class="glyphicon glyphicon-list-alt"></span>  List</a></li>
-					<li class="dropdown">
-            			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span>
-            			<b class="caret"></b></a>
-            			<ul class="dropdown-menu" role="menu">
-              				<li role="presentation" class="dropdown-header">Modules</li>
-              				<li><a href="/thesis/home">Thesis</a></li>
-              				<li><a href="/adviser/home">Adviser</a></li>
-              				<li><a href="/student/home">Student</a></li>
-              				<li role="presentation" class="divider"></li>
-              				<li role="presentation" class="dropdown-header">About Us</li>
-              				<li><a href="/module-1/1">Developer 1</a></li>
-              				<li><a href="/module-1/2">Developer 2</a></li>
-            			</ul>
-          			</li>
-				</ul>
-			</div>
-
-		</div>	
-	</div>
-
-	<div class="site-wrapper" style="margin-top:0px;">
+<html class="student">
+<body class="content student">	
+	<div class="site-wrapper content" style="color:#000;">
 		
 		<div class="site-wrapper inner">
 			<div class="cover-container">
