--- a/adviser/add_adviser.html
+++ b/adviser/add_adviser.html
@@ -1,52 +1,7 @@
 <!DOCTYPE html>
 {% autoescape true %}
-<html>
-<head>
-	<title>Adviser Manager</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/css/bootstrap.css">
-	<script type="text/javascript" src="/stylesheets/js/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="/stylesheets/js/bootstrap.min.js"></script>
-</head>
-<body style="background-image: url(/image/background.jpg); background-repeat: no-repeat; background-size: 100% 200%;">
-
-	
-	
-	<div class="navbar navbar-inverse navbar-static-top">
-		<div class = "container">
-
-			<a href="/" class="navbar-brand">Advanced Web Computing</a>
-
-			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-
-			<div class="collapse navbar-collapse navHeaderCollapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/adviser/home"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
-					<li class="active"><a href="/adviser/new"><span class="glyphicon glyphicon-file"></span>  Create</a></li>
-					<li><a href="/adviser/list"><span class="glyphicon glyphicon-list-alt"></span>  List</a></li>
-					<li class="dropdown">
-            			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span>
-            			<b class="caret"></b></a>
-            			<ul class="dropdown-menu" role="menu">
-            				<li role="presentation" class="dropdown-header">Modules</li>
-              				<li><a href="/thesis/home">Thesis</a></li>
-              				<li><a href="/adviser/home">Adviser</a></li>
-              				<li><a href="/student/home">Student</a></li>
-              				<li role="presentation" class="divider"></li>
-              				<li role="presentation" class="dropdown-header">About Us</li>
-              				<li><a href="/module-1/1">Developer 1</a></li>
-              				<li><a href="/module-1/2">Developer 2</a></li>
-            			</ul>
-          			</li>
-				</ul>
-			</div>
-
-		</div>	
-	</div>
+<html class="adviser">
+<body class="content adviser">
 <div class="container" style="color:#fff;">
 	<h1>Add New Adviser Record</h1>
 	<hr>
@@ -120,44 +75,6 @@
 				<input type="reset" class="btn btn-default" value="Clear">
 			</div>
 		</div>
-<!--
-		<div class="input-group input-group-lg" style="margin-bottom:25px;">
-  			<span class="input-group-addon">Title</span>
-  			<input type="text" class="form-control" name="title">
-		</div>
-
-		<div class="input-group input-group-lg" style="margin-bottom:25px;">
-  			<span class="input-group-addon">Description</span>
-  			<textarea rows="5" class="form-control" name="desc"></textarea>
-		</div>
-
-		<div class="input-group input-group-lg" style="margin-bottom:25px;">
-  			<span class="input-group-addon">School Year</span>
-  				<select class="form-control" name="syear">
-  					<option>2013-2014</option>
-  					<option>2012-2013</option>
-  					<option>2011-2012</option>
-  					<option>2010-2011</option>
-  					<option>2009-2010</option>
-  				</select>
-		</div>
-
-		<div class="input-group input-group-lg" style="margin-bottom:25px;">
-  			<span class="input-group-addon">Status</span>
-  			<span class="form-control">
-  			<label class="radio-inline"><input type="radio" name="status" value="Active" checked="checked"> Active </label>
-			<label class="radio-inline"><input type="radio" name="status" value="Inactive"> Inactive </label>
-			<label class="radio-inline"><input type="radio" name="status" value="Rejected"> Rejected </label>
-			<label class="radio-inline"><input type="radio" name="status" value="Pending"> Pending </label>
-			<label class="radio-inline"><input type="radio" name="status" value="For Removal"> For Removal </label>
-			</span>
-		</div>
-		<div class="btn-group btn-group-lg pull-right">
-			<input type="submit" class="btn btn-primary" value="Save">
-			<input type="reset" class="btn btn-default" value="Clear">
-		</div>
-	</form>
-	-->
 	<script type="text/javascript">
 		function validate(myForm){
 
