--- a/thesis/edit_thesis.html
+++ b/thesis/edit_thesis.html
@@ -1,53 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Thesis Manager</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/css/bootstrap-select.css">
-	<script type="text/javascript" src="/stylesheets/js/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="/stylesheets/js/bootstrap.min.js"></script>
-</head>
-<body style="background-image: url(/image/background.jpg); background-repeat: no-repeat; background-size: 100% 200%;">
-
-	
-	
-	<div class="navbar navbar-inverse navbar-static-top">
-		<div class = "container">
-
-			<a href="/" class="navbar-brand">Advanced Web Computing</a>
-
-			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-
-			<div class="collapse navbar-collapse navHeaderCollapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/thesis/home"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
-					<li><a href="/thesis/new"><span class="glyphicon glyphicon-file"></span>  Create</a></li>
-					<li><a href="/thesis/list"><span class="glyphicon glyphicon-list-alt"></span>  List</a></li>
-					<li class="dropdown">
-            			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span>
-            			<b class="caret"></b></a>
-            			<ul class="dropdown-menu" role="menu">
-            				<li role="presentation" class="dropdown-header">Modules</li>
-              				<li><a href="/thesis/home">Thesis</a></li>
-              				<li><a href="/adviser/home">Adviser</a></li>
-              				<li><a href="/student/home">Student</a></li>
-              				<li role="presentation" class="divider"></li>
-              				<li role="presentation" class="dropdown-header">About Us</li>
-              				<li><a href="/module-1/1">Developer 1</a></li>
-              				<li><a href="/module-1/2">Developer 2</a></li>
-              			</ul>
-          			</li>
-				</ul>
-			</div>
-
-		</div>	
-	</div>
-<div class="container" style="color:#fff;">
+<html class="thesis">
+<body class="content thesis">
+<div class="container">
 	<h1>Edit Recorded Thesis</h1>
 	<hr>
 	<form action="/thesis/edit/{{thesis.key.id()}}" method="post" onsubmit="return validate(this)">
