--- a/thesis/list_thesis.html
+++ b/thesis/list_thesis.html
@@ -1,55 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Thesis Manager</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/css/bootstrap.css">
-	<script type="text/javascript" src="/stylesheets/js/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="/stylesheets/js/bootstrap.js"></script>
-</head>
-<body>
-	<div class="navbar navbar-inverse navbar-static-top">
-		<div class = "container">
-
-
-			<a href="/" class="navbar-brand">Advanced Web Computing</a>
-
-			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-
-			<div class="collapse navbar-collapse navHeaderCollapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/thesis/home"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
-					<li><a href="/thesis/new"><span class="glyphicon glyphicon-file"></span>  Create</a></li>
-					<li class="active"><a href="/thesis/list"><span class="glyphicon glyphicon-list-alt"></span>  List</a></li>
-					<li class="dropdown">
-            			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span>
-            			<b class="caret"></b></a>
-            			<ul class="dropdown-menu" role="menu">
-            				<li role="presentation" class="dropdown-header">Modules</li>
-              				<li><a href="/thesis/home">Thesis</a></li>
-              				<li><a href="/adviser/home">Adviser</a></li>
-              				<li><a href="/student/home">Student</a></li>
-              				<li role="presentation" class="divider"></li>
-              				<li role="presentation" class="dropdown-header">About Us</li>
-              				<li><a href="/module-1/1">Developer 1</a></li>
-              				<li><a href="/module-1/2">Developer 2</a></li>
-            			</ul>
-          			</li>
-				</ul>
-			</div>
-
-		</div>	
-	</div>
-
+<html class="thesis">
+<body class="content thesis" style="color:#000;">
 	{% if (result) :  %}
 	<div class="table-responsive container">
 
-	<h1>List of Thesis Records</h1>
-		<table class="table table-striped">
+	<h1>List of Thesis Records</h1>		
+		<table class="table table-hover" style="color:#000;">
 			<thead>
 				<th>Title</th>
 				<th>School Year</th>
@@ -58,23 +14,23 @@
 			</thead>
 			<tbody>
 				{% for thesis in all_thesis %}
-				<tr>
-					<td>{{thesis.title}}</td>
-					<td>{{thesis.schoolyear}}</td>
-					<td>{{thesis.status}}</td>
-					<td>
-					<div class="btn-group btn-group-sm">
-						<a href="/thesis/view/{{thesis.key.id()}}" class="btn btn-primary btn-sm" role="button">View</a>
-						<a href="/thesis/edit/{{thesis.key.id()}}" class="btn btn-info btn-sm" role="button">Edit</a>
-					</div>
-					</td>	
-				</tr>
+					<tr>	
+						<td>{{thesis.title}}</td>
+						<td>{{thesis.schoolyear}}</td>
+						<td>{{thesis.status}}</td>
+						<td>
+							<div class="btn-group btn-group-sm">
+								<a href="/thesis/view/{{thesis.key.id()}}" class="btn btn-primary btn-sm" role="button">View</a>
+								<a href="/thesis/edit/{{thesis.key.id()}}" class="btn btn-info btn-sm" role="button">Edit</a>
+							</div>
+						</td>	
+					</tr>
 				{% endfor %}
 			</tbody>
 		</table>
 	</div>
 	{% else %}
-		<div class="container">
+		<div class="container content thesis">
 			<h1>No Records Found.</h1>
 		</div>
 	{% endif %}
